--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Conecta 4</string>
-    <string name="titulo">CONECTA 4</string>
+    <string name="app_name">Juegos</string>
+    <string name="titulo">JUEGOS</string>
     <string name="contentDescription">Botón de Conecta 4</string>
     <string name="nosepuedecolocarficha">No se puede colocar ficha</string>
     <string name="fin_del_juego">La partida ha terminado</string>
